fixed spacing

--- a/src/components/LinkEditor.css
+++ b/src/components/LinkEditor.css
@@ -3,7 +3,6 @@ div.link {
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin-left: 1em;
     transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
